--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,12 @@
 $primary-color: #444;
+$secondary-color:#eece1a;
+$show-home-image: true;
+$home-image: url(/img/background.jpg);
+$background-opacity: 0.9;
 
+@mixin easeOut {
+  transition: all 0.5s ease-out;
+}
 
 * {
   box-sizing: border-box;
@@ -33,4 +40,39 @@ h1, h2, h3{
 a{
   color:#fff;
   text-decoration: none;
+}
+
+header{
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+}
+
+.text-secondary{
+  color: $secondary-color;
+}
+
+main{
+  padding: 4rem;
+  height: 100%;
+
+  .icons {
+    margin-top: 1rem;
+
+    a{
+      padding: 0.4rem;
+
+      &:hover{
+        color: $secondary-color;
+        @include easeOut();
+      }
+    }
+  }
+
+  &#home{
+    overflow: hidden;
+      h1{
+        margin-top: 20vh;
+      }
+  }
 }
