--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -69,8 +69,17 @@
 
 //Smartphones
 @include mediaSm {
-    main#home h1 {
+    main#home {
+        padding: 2rem;
+
+        #home {
         margin-top: 10vh;
+        }
+
+        .lg-heading {
+            margin-top:1rem;
+            font-size: 5rem;
+          }
     }
 
     .projects {
