--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -69,16 +69,16 @@
 
 //Smartphones
 @include mediaSm {
-    main#home {
+    main {
         padding: 2rem;
 
-        #home {
+        #home h1{
         margin-top: 10vh;
         }
 
         .lg-heading {
             margin-top:1rem;
-            font-size: 1rem;
+            font-size: 2.5rem;
           }
     }
 
