--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -36,13 +36,13 @@
     }
 
     .menu.nav {
-        height: 75vh;
+        height: 70vh;
         transform:translate3d(-100%, 0, 0); 
         font-size: 24px;
     }
 
     .menu-branding {
-        height: 25vh;
+        height: 30vh;
         transform: translate3d(100%, 0, 0);
 
         .portrait {
@@ -89,6 +89,7 @@
     ul.nav-item 
      {
         margin-bottom: 550px ;
+        padding-bottom: 200px;
     }
 
     // Contact Page 
