--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -92,6 +92,7 @@
             border-radius: 50%;
             border: solid 3px $secondary-color;
             z-index: 0;
+            background-size: cover;
         }
     }
 
