--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -46,9 +46,10 @@
         transform: translate3d(100%, 0, 0);
 
         .portrait {
-            background: url('/img/portrait_small.jpg');
+            background: url('/img/IMG_0158\ 3.jpg');
             width: 150px;
             height: 150px;
+            background-size: cover;
         }
     }
 
