--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -66,6 +66,12 @@
     .projects {
         grid-template-columns: repeat(2, 1fr);
     }
+
+    li.nav-item.show{
+        padding-bottom: 1rem;
+        margin-bottom: 2.5rem;
+    
+    }
 }
 
 //Smartphones
