--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -68,8 +68,8 @@
     }
 
     li.nav-item.show{
-        padding-bottom: 1rem;
-        margin-bottom: 2.5rem;
+        //padding-bottom: 1rem;
+        margin-bottom: 4.6rem;
     
     }
 }
