--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -68,8 +68,12 @@
     }
 
     li.nav-item.show{
+        position: relative;
         padding:0;
         margin:0;
+        margin-top: -25px;
+        padding-top: 3px;
+        bottom:155px;
     
     }
 }
