--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -74,7 +74,6 @@
         margin-top: -25px;
         padding-top: 3px;
         bottom:195px;
-    
     }
 }
 
@@ -101,6 +100,15 @@
      {
         margin-bottom: 550px ;
         padding-bottom: 200px;
+    }
+    
+    li.nav-item.show{
+        position: relative;
+        padding:0;
+        margin:0;
+        margin-top: -25px;
+        padding-top: 3px;
+        bottom:195px;
     }
 
     // Contact Page 
