--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -69,11 +69,11 @@
 
     li.nav-item.show{
         position: relative;
-        padding:0;
+        padding:35px;
         margin:0;
         margin-top: -25px;
         padding-top: 3px;
-        bottom:195px;
+        bottom:70px;
     }
 }
 
@@ -101,7 +101,7 @@
         margin-bottom: 550px ;
         padding-bottom: 200px;
     }
-    
+
     li.nav-item.show{
         position: relative;
         padding:0;
